--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="lib/weml.min.js"></script>
 	<script src="lib/nebgl.js"></script>
 	<script src="lib/webgl-dynamicdraw.js"></script>
+	<script src="lib/keyinput.js"></script>
 	<script src="pixelhorror.js"></script>
 	
 	<!-- shaders -->
