Add favicon to html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Some Horror JS Horror Game</title>
 	
+	<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
+	
 	<link href="normalize.css" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
