Add comments in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Some Horror JS Horror Game</title>
 	
+	<!-- favicon -->
 	<link href="favicon.ico" type="image/x-icon" rel="shortcut icon">
 	
+	<!-- stylesheets -->
 	<link href="normalize.css" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
 </head>
