Revert lib paths to actual libs

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 	
 	<!-- load scripts -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
-	<!-- <script src="lib/weml.min.js"></script> -->
-	<script src="../weml.js/weml.js"></script>
+	
+	<script src="lib/weml.min.js"></script>
+	<!-- <script src="../weml.js/weml.js"></script>-->
+	
 	<script src="lib/nebgl.js"></script>
-	<!-- <script src="lib/webgl-dynamicdraw.js"></script> -->
-	<script src="../webgl-dynamicdraw/webgl-dynamicdraw.js"></script>
+	
+	<script src="lib/webgl-dynamicdraw.js"></script>
+	<!--<script src="../webgl-dynamicdraw/webgl-dynamicdraw.js"></script>-->
 	<script src="lib/keyinput.js"></script>
 	<script src="pixelhorror.js"></script>
 	
